<resources>
    <string name="app_name">YSTORE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="category_update">Update Category </string>
    <string name="title_home">Home</string>
    <string name="title_cats">category</string>
    <string name="title_Reports">Reports</string>
    <string name="title_profile">Profile</string>
    <string name="title_proByCat">ProductsByCat</string>
    <string name="title_cart">Cart</string>
    <string name="spiner_nothing_selected_message">nothing</string>
    <string name="notification_channel_name">yStore</string>
    <string name="new_pictures_title">New yStore Products</string>
    <string name="new_pictures_text">You have new products in yStore.</string>

</resources>