<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="6dp">
  <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
   <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txt_edit_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/category_update"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:padding="4dp">


                <EditText
                    android:id="@+id/ed_update_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="28sp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="18dp"
                    android:background="@android:color/white"
                    android:gravity="top"
                    android:padding="20dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_update"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginBottom="6dp"
                        android:layout_weight="1"

                        android:text="@string/update"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_cancle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginBottom="6dp"
                        android:layout_weight="1"

                        android:text="@string/cancel"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



</LinearLayout>